Github pages düzenlemeleri

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:700%7CNunito:300,600" rel="stylesheet" />
 
 		<!-- Bootstrap -->
-		<link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css"/>
+		<link type="text/css" rel="stylesheet" href="./assets/css/bootstrap.min.css"/>
 
 		<!-- Font Awesome Icon -->
-		<link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="./assets/css/font-awesome.min.css" />
 
 		<!-- Custom stlylesheet -->
-    <link type="text/css" rel="stylesheet" href="/assets/css/style.css"/>
+    <link type="text/css" rel="stylesheet" href="./assets/css/style.css"/>
     
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
@@ -100,9 +100,9 @@
       To create a production bundle, use `npm run build`.
     -->
     
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/main.js"></script>
 
   </body>
 </html>
